--- a/styles.css
+++ b/styles.css
@@ -73,7 +73,7 @@ Asset Color:#274e13 CalPolyGreen
 Asset Color:#85200c Sienna
 Nuetral Color:#F3EFE0 Eggshell
 Nuetral Color:#80727B TaupeGray
-Call To Action:#80727B RussianViolet
+Call to Action: #9b7ede PaynesGray
 
 */
 
@@ -92,6 +92,11 @@ h2{
 
 .navbar{
     background-color: #F3EFE0;
+}
+
+.navbar-brand h3{
+    display: inline-block;
+    transform: translate(5%, 0%);
 }
 
 
@@ -151,21 +156,23 @@ h2{
     width: 100%;
     background-image: url('images/SmileShoes.jpg');
     background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
 
 .home h2{
-    color: #274e13;
+    color: #43B929de;
     text-shadow:
-    1px 1px 0 #F3EFE0,
-    -1px 1px 0 #F3EFE0,
-    -1px -1px 0 #F3EFE0,
-    1px -1px 0 #F3EFE0;
+    2px 2px 2px #274e13,
+    -2px 2px 2px #274e13,
+    -2px -2px 2px #274e13,
+    2px -2px 2px #274e13;
 }
 
 .about{
-    padding: 10px;
+    padding-top: 10px;
+    padding-bottom: 50px;
 }
 
 .about img{
@@ -186,6 +193,27 @@ h2{
     content: 'workspace_premium';
     font-family: 'Material Icons';
 }
+
+.location{
+    padding-bottom: 100px;
+}
+
+.frame {
+    margin: 0% 5% 5% 15%;
+    padding: 8px;
+    height: 230px;
+    width: 300px;
+    border: 2px solid #80727B;
+    border-radius: 5px;
+    background-color: #80727B;
+  }
+
+.textbox-border {
+    background-color: #EBEBEB;
+    padding: 1.2em;
+    border: 1px solid #80727B;
+    border-radius: 5px;
+  }
 
 
 footer{
