--- a/styles.css
+++ b/styles.css
@@ -279,6 +279,17 @@ iconify-icon{
     font-style: italic;
 }
 
+.venmoa{
+    font-family: "Salsa", cursive;
+    font-style: italic;
+}
+
+.venmob{
+    font-family: "Inria Sans", sans-serif;
+    font-style: italic;
+    font-weight: bold;
+}
+
 .zelle {
     font-family: 'Ubuntu', sans-serif;
     font-weight: 700;
